fix authentication for razor pages, add denied acess page and change password

--- a/AppointmentSchedule/Pages/Shared/_Layout.cshtml
+++ b/AppointmentSchedule/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@inject SignInManager<IdentityUser> signInMgr
-
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +32,7 @@
                         {
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/">Hello @User.Identity?.Name</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Account/ChangePassword">Hello @User.Identity?.Name</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
