--- a/AppointmentSchedule/Pages/Account/ChangePassword.cshtml
+++ b/AppointmentSchedule/Pages/Account/ChangePassword.cshtml
@@ -1,4 +1,20 @@
 ﻿@page
 @model AppointmentSchedule.Pages.Account.ChangePasswordModel
-@{
-}
+
+
+<div class="m-1 p-1">
+    <div class="text-danger" asp-validation-summary="All"></div>
+    <form method="post" >
+        <div class="form-group">
+            <label asp-for="Password">New password </label>
+            <div asp-validation-for="Password" class="text-danger"></div>
+            <input asp-for="Password" type ="password" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="RetypePassword">Retype new password</label>
+            <div asp-validation-for="RetypePassword" class="text-danger"></div>
+            <input asp-for="RetypePassword" type="password" class="form-control" />
+        </div>
+        <button class="btn btn-primary mt-2" type="submit">Change Password</button>
+    </form>
+</div>
