Add CRUD Appoitnment

--- a/AppointmentSchedule/Pages/Shared/_Layout.cshtml
+++ b/AppointmentSchedule/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        @{
+                            if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Appointments/Index">My Appointments</a>
+                                </li>
+                            }
+                        }
+
                     </ul>
                     @{
                         if (User.Identity.IsAuthenticated)
