--- a/AppointmentSchedule/Pages/Account/Login.cshtml
+++ b/AppointmentSchedule/Pages/Account/Login.cshtml
@@ -1,19 +1,38 @@
 ﻿@page
 @model AppointmentSchedule.Pages.Account.LoginModel
 
-<div class="m-1 p-1">
-    <div class="text-danger" asp-validation-summary="All"></div>
-    <form method="post" >
-        <div class="form-group">
-            <label asp-for="Username"></label>
-            <div asp-validation-for="Username" class="text-danger"></div>
-            <input asp-for="Username" class="form-control" />
+<div class="row">
+
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+
+        <div class="card border-0 shadow rounded-3 my-5">
+
+            <div class="card-body p-4 p-sm-5">
+
+                <h5 class="card-title text-center mb-3 fw-light fs-5">Log In</h5>
+
+                <div class="m-1 p-1">
+                    <div class="text-danger" asp-validation-summary="All"></div>
+                    <form method="post">
+                        <div class="form-floating mb-3">
+                            <input asp-for="Username" class="form-control" />
+                            <label asp-for="Username"></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Password" type="password" class="form-control" />
+                            <label asp-for="Password"></label>
+                        </div>
+                        <div class="d-grid">
+                            <button class="btn btn-primary btn-login text-uppercase fw-light" type="submit">Log In</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+
+
         </div>
-        <div class="form-group">
-            <label asp-for="Password"></label>
-            <div asp-validation-for="Password" class="text-danger"></div>
-            <input asp-for="Password" type="password" class="form-control" />
-        </div>
-        <button class="btn btn-primary mt-2" type="submit">Log In</button>
-    </form>
+
+    </div>
+
 </div>
