--- a/AppointmentSchedule/Pages/Account/Register.cshtml
+++ b/AppointmentSchedule/Pages/Account/Register.cshtml
@@ -1,24 +1,35 @@
 ﻿@page
 @model AppointmentSchedule.Pages.Account.RegisterModel
 
-<div class="m-1 p-1">
-    <form method="post">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="form-group">
-            <label>User Name</label>
-            <input asp-for="Username" type="text" class="form-control" />
+<div class="row">
+
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card border-0 shadow rounded-3 my-5">
+            <div class="card-body p-4 p-sm-5">
+                <h5 class="card-title text-center mb-3 fw-light fs-5">Register</h5>
+
+                <div class="m-1 p-1">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Username" type="text" class="form-control" />
+                            <label asp-for="Username">Username</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Email" type="email" class="form-control" />
+                            <label asp-for="Email">Email</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input asp-for="Password" type="password" class="form-control" />
+                            <label asp-for="Password">Password</label>
+                        </div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-primary text-uppercase fw-light">Register</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input asp-for="Email" type="email" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input asp-for="Password" type="password" class="form-control" />
-        </div>
-        <div class="py-2">
-            <button type="submit" class="btn btn-primary">Register</button>
-            @*<a class="btn btn-secondary" asp-page="list">Back</a>*@
-        </div>
-    </form>
+    </div>
 </div>
