--- a/AppointmentSchedule/Pages/Index.cshtml
+++ b/AppointmentSchedule/Pages/Index.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<div class="row">
+    <div class="text-center col-6">
+        <h1 class="mt-5 ">Never Miss An Appointment</h1>
+        <h5 class="mt-3">Keeping the record of all the appointments and daily meetings</h5>
+    </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>This is the Index Page</p>
+    <div class="text-center col-6">
+        <img class="img-fluid mt-5" src="/img/3959915.jpg"/>
+    </div>
 </div>
