--- a/AppointmentSchedule/Pages/Appointments/Edit.cshtml
+++ b/AppointmentSchedule/Pages/Appointments/Edit.cshtml
@@ -16,17 +16,17 @@
             <input type="hidden" asp-for="Appointment.ID" />
             <input type="hidden" asp-for="Appointment.UserEmail" />
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Appointment.Title" class="control-label"></label>
                 <input asp-for="Appointment.Title" class="form-control" />
                 <span asp-validation-for="Appointment.Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Appointment.CreatedDate" class="control-label"></label>
                 <input asp-for="Appointment.CreatedDate" class="form-control" />
                 <span asp-validation-for="Appointment.CreatedDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
