--- a/AppointmentSchedule/Pages/Appointments/Delete.cshtml
+++ b/AppointmentSchedule/Pages/Appointments/Delete.cshtml
@@ -8,9 +8,8 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this appointments?</h3>
 <div>
-    <h4>Appointment</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,7 +28,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Appointment.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a class="btn btn-secondary"asp-page="./Index">Back to List</a>
     </form>
 </div>
