--- a/AppointmentSchedule/Pages/Appointments/Details.cshtml
+++ b/AppointmentSchedule/Pages/Appointments/Details.cshtml
@@ -9,7 +9,6 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Appointment</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -27,6 +26,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Appointment?.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-warning"asp-page="./Edit" asp-route-id="@Model.Appointment?.ID">Edit</a> 
+    <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
 </div>
