--- a/AppointmentSchedule/Pages/Appointments/Index.cshtml
+++ b/AppointmentSchedule/Pages/Appointments/Index.cshtml
@@ -11,9 +11,9 @@
 <p>
     <a class="btn btn-primary" asp-page="Create">Create New Appointments</a>
 </p>
-<table class="table">
+<table class="table table-responsive table-borderless">
     <thead>
-        <tr>
+        <tr class="bg-light">
             <th>
                 @Html.DisplayNameFor(model => model.Appointment[0].Title)
             </th>
@@ -33,9 +33,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a class="btn btn-warning" asp-page="./Edit" asp-route-id="@item.ID">Edit</a> 
+                <a class="btn btn-info" asp-page="./Details" asp-route-id="@item.ID">Details</a> 
+                <a class="btn btn-danger" asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
